--- a/style.css
+++ b/style.css
@@ -72,3 +72,41 @@
     color: #333;
     text-decoration: none;
 }
+/*  */
+.shop-menu {
+  display: flex;
+}
+.left-menu-list{
+  width: 70%;
+}
+.right-menu-list{
+  width: 30%;
+  direction: rtl;
+}
+.shop-menu ul{
+  display: flex;
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+}
+.shop-menu ul li{
+  min-width: 75px;
+    padding: 20px;
+}
+.shop-menu ul li a{
+  color: #333;
+  text-decoration: none;
+}
+.shop-menu ul li a:hover{
+  color: #d19c97;
+}
+.shop-menu ul.dropdown{
+  display: none;
+  border: 1px solid #ddd;
+    position: absolute;
+    box-shadow: #ddd 1px 1px 4px;
+}
+
+.dropdown-head:hover ul.dropdown{
+  display: block;
+}
