--- a/style.css
+++ b/style.css
@@ -106,7 +106,46 @@
     position: absolute;
     box-shadow: #ddd 1px 1px 4px;
 }
-
 .dropdown-head:hover ul.dropdown{
   display: block;
+}
+.banner{
+    position: relative;
+    height: 400px;
+    float: left;
+    width: 100%;
+    margin-left: 15px;
+}
+.banner img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.banner .banner-text {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  color: #fff;
+  background-color: #0000003d;
+}
+.banner-text h4 {
+  margin: 0;
+  text-transform: uppercase;
+  font-size: 28px;
+  font-weight: 500;
+}
+.banner-text h3 {
+  margin: 0;
+  font-size: 50px;
+}
+.banner-text a.show-now {
+  background-color: #fff;
+  color: #000;
+  padding: 10px 15px;
 }
