Done with items

--- a/style.css
+++ b/style.css
@@ -229,3 +229,47 @@
   background-color: transparent;
   cursor: pointer;
 }
+.cart {
+  border: 1px solid #ddd;
+  margin-right: 25px;
+  margin-bottom: 50px;
+}
+.cart img {
+  width: 100%;
+}
+.cart .cart-details {
+  border-top: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
+  padding: 15px;
+}
+
+.cart .cart-details .name-head {
+  margin: 0;
+  text-align: center;
+  font-size: 18px;
+  font-weight: 500;
+}
+.cart .cart-details .cart-price {
+  display: flex;
+  justify-content: center;
+}
+.cart .cart-price h6 {
+  font-size: 16px;
+  margin: 0;
+  padding: 5px;
+  font-weight: 500;
+}
+.cart .cart-price h6.last {
+  text-decoration: line-through;
+  color: #888;
+}
+
+.cart .cart-footer {
+  display: flex;
+  justify-content: space-between;
+  padding: 15px;
+}
+.cart .cart-footer a {
+  color: #d19c97;
+  font-size: 14px;
+}
