Done with 1st page responsive

--- a/common.css
+++ b/common.css
@@ -51,3 +51,14 @@ body {
 .margin-right-5{
   margin-right: 5%;
 }
+
+@media only screen and (max-width:992px) {
+  .wid-25, .wid-50, .wid-75, .wid-33{
+    width: 100%;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+  .arrange-left{
+    float: none;
+  }
+}
