--- a/style.css
+++ b/style.css
@@ -376,3 +376,40 @@
   display: flex;
   justify-content: space-between;
 }
+
+@media only screen and (max-width: 992px) {
+  .search-product {
+    display: flex;
+  }
+  .search-product input {
+    flex: 100%;
+  }
+  .selected-product {
+    text-align: left;
+  }
+  .shop-menu ul {
+    display: block;
+  }
+  .shop-menu ul li {
+    padding: 10px;
+  }
+  .banner {
+    float: none;
+  }
+  .stay-updated {
+    padding-top: 25px;
+    padding-left: 5%;
+    padding-right: 5%;
+    padding-bottom: 40px;
+  }
+  .vender-list {
+    justify-content: start;
+    flex-wrap: wrap;
+  }
+  .footer {
+    display: block;
+  }
+  .copy-right {
+    flex-direction: column;
+  }
+}
