--- a/style.css
+++ b/style.css
@@ -402,6 +402,55 @@
   height: 35px;
   width: 100px;
 }
+/* custom checkbox */
+.custom-control-check {
+  position: relative;
+  z-index: 1;
+  display: block;
+  min-height: 16px;
+  padding-left: 16px;
+}
+.custom-control-input{
+  position: absolute;
+  left: 0;
+  z-index: -1;
+  width: 16px;
+  height: 16px;
+  opacity: 0;
+}
+.custom-control-label{
+  position: relative;
+  margin-bottom: 0px;
+  vertical-align: top;
+}
+.custom-control-label::before{
+  position: absolute;
+  top:3px;
+  left: -25px;
+  display: block;
+  width: 16px;
+  height: 16px;
+  content: "";
+  border: #d19c97 solid 1px;
+}
+.custom-control-input:checked ~ .custom-control-label::before{
+  border-color:#d19c97;
+  background-color: #d19c97;
+}
+.custom-control-label::after{
+  position:absolute;
+  top:4px;
+  left:-24px;
+  display: block;
+  width: 16px;
+  height: 16px;
+  content: "";
+  background: no-repeat 50% / 50% 50%;
+}
+.custom-control-input ~ .custom-control-label::after {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26l2.974 2.99L8 2.193z'/%3e%3c/svg%3e");
+}
+/* custom checkbox end */
 @media only screen and (max-width: 992px) {
   .search-product {
     display: flex;
