--- a/style.css
+++ b/style.css
@@ -451,6 +451,23 @@
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26l2.974 2.99L8 2.193z'/%3e%3c/svg%3e");
 }
 /* custom checkbox end */
+
+.custom-control-check{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-left: 20px;
+  margin-right: 20px;
+  color: #666;
+  margin-bottom: 15px;
+}
+.filter-prod-count {
+  border: 1px solid #ddd;
+  padding-left: 5px;
+  padding-right: 5px;
+  font-size: 13px;
+}
+
 @media only screen and (max-width: 992px) {
   .search-product {
     display: flex;
