--- a/style.css
+++ b/style.css
@@ -521,6 +521,59 @@
   background-color: #d19c97;;
 }
 /* cart details end */
+/* cart summary style */
+.cart-summary-wrapper{
+  margin-top: 50px;
+  margin-left: 20px;
+}
+.cart-summary-wrapper .coupon-inputs {
+  display: flex;
+  height: 50px;
+}
+
+.coupon-inputs input {
+  border: 1px solid #ddd;
+  border-right: 0;
+  padding-left: 20px;
+  width: 60%;
+}
+.coupon-inputs button{
+  background-color: #d19c97;
+  border: 0;
+  width: 40%;
+}
+.cart-summary-wrapper  .cart-summary-body{
+    border: 1px solid #ddd;
+    margin-top: 50px;
+    padding: 20px;
+}
+.cart-summary-wrapper .cart-summy-item{
+  display: flex;
+    justify-content: space-between;
+}
+.cart-summary-wrapper .total-wrapper {
+  border: 1px solid #ddd;
+  border-top: none;
+  padding: 20px;
+}
+.cart-summary-wrapper .total-head {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 30px;
+}
+.total-head h4{
+  margin: 0;
+}
+.proceed-input button {
+  background-color: #d19c97;
+  border: 0;
+  padding: 20px;
+  width: 100%;
+  font-size: 16px;
+  cursor: pointer;
+}
+/* cart summary style end */
+
 
 @media only screen and (max-width: 992px) {
   .search-product {
